--- a/back/package.json
+++ b/back/package.json
@@ -5,6 +5,7 @@
     "debug": "bun run --inspect --hot src/index.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.35.0",
     "hono": "^4.6.17"
   },
   "devDependencies": {
