install drizzle orm

--- a/back/.env.example
+++ b/back/.env.example
@@ -1,1 +1,9 @@
+PROJECT_NAME=music_generator
+DOCKER_DB_VOLUME=music_generator_db_volume
+
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+DATABASE_URL=postgres://<user>:<password>@<host>:<port>/<database>
+
 ANTHROPIC_API_KEY=
