--- a/back/package.json
+++ b/back/package.json
@@ -6,9 +6,14 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.35.0",
-    "hono": "^4.6.17"
+    "drizzle-orm": "^0.38.4",
+    "hono": "^4.6.17",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
-    "@types/bun": "^1.1.18"
+    "@types/bun": "^1.1.18",
+    "@types/pg": "^8.11.11",
+    "drizzle-kit": "^0.30.2",
+    "tsx": "^4.19.2"
   }
 }
