--- a/back/compose.yml
+++ b/back/compose.yml
@@ -1,4 +1,3 @@
-
 version: '3.8'
 services:
   db:
@@ -6,7 +5,7 @@ services:
     container_name: ${PROJECT_NAME}-db
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
+      test: ['CMD-SHELL', 'pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}']
       interval: 1s
       timeout: 5s
       retries: 10
@@ -15,7 +14,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - db-volume:/var/lib/postgresql/data
 
