--- a/back/package.json
+++ b/back/package.json
@@ -15,6 +15,7 @@
     "@types/bun": "^1.1.18",
     "@types/pg": "^8.11.11",
     "drizzle-kit": "^0.30.2",
+    "prettier": "3.4.2",
     "tsx": "^4.19.2"
   }
 }
