easily seed for development

--- a/back/package.json
+++ b/back/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.35.0",
     "drizzle-orm": "^0.38.4",
+    "drizzle-seed": "^0.3.1",
     "hono": "^4.6.17",
     "nanoid": "^5.0.9",
     "pg": "^8.13.1"
