--- a/back/package.json
+++ b/back/package.json
@@ -6,11 +6,13 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.35.0",
+    "@hono/zod-validator": "^0.4.2",
     "drizzle-orm": "^0.38.4",
     "drizzle-seed": "^0.3.1",
     "hono": "^4.6.17",
     "nanoid": "^5.0.9",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bun": "^1.1.18",
