trying to use hono client

--- a/back/.vscode/launch.json
+++ b/back/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "bun",
       "request": "attach",
       "name": "Attach Bun",
-      "url": "ws://localhost:6499/1lf1zfw3noq",
+      "url": "ws://localhost:6499/zsofkdk9iel",
       "stopOnEntry": false,
       "internalConsoleOptions": "neverOpen"
     }
