--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["env.d.ts", "src/**/*", "../shared/types"],
   "compilerOptions": {
     // Enable latest features
     "lib": ["ESNext"],
