--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "@tailwindcss/vite": "^4.0.3",
     "hono": "^4.6.20",
+    "tailwindcss": "^4.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
