--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,6 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.23",
-    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.0.3",
     "hono": "^4.6.20",
     "tailwindcss": "^4.0.3",
@@ -29,6 +27,7 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/tsconfig": "^0.7.0",
+    "daisyui": "^5.0.0-beta.7",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
