--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
     "hono": "^4.6.20",
+    "remeda": "^2.20.1",
     "tailwindcss": "^4.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
