back -- tsconfig -- alias src

--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -24,6 +24,9 @@
     // Some stricter flags
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noPropertyAccessFromIndexSignature": true
+    "noPropertyAccessFromIndexSignature": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
