--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
     "hono": "^4.6.17",
     "nanoid": "^5.0.9",
     "pg": "^8.13.1",
+    "remeda": "^2.20.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
